pkg/lang/testdata/ub/constraints/valid/chained-for-each.ub
constraints: [
  {
    kind: predicate
    @for-each: [
      { @rule: var.rules },
      { @t:    @rule.value.transitions },
    ]
    when:    true
    require: @t.value.days != null
  },
]
