pkg/lang/testdata/ub/constraints/invalid/for-each-each-binding.ub
constraints: [
  {
    kind: predicate
    @for-each: [ { @each: var.rules }, ]
    when:    true
    require: true
  },
]
